--- a/todolist/tasks/templates/tasks/create_task.html
+++ b/todolist/tasks/templates/tasks/create_task.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Create Task</title>
 </head>
 <body>
-
+    <h2>Create Task</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Save Task</button>
+    </form>
 </body>
 </html>
