--- a/todolist/tasks/templates/tasks/home.html
+++ b/todolist/tasks/templates/tasks/home.html
@@ -1,25 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KyZXEJxvNkK6pY4gE2p4vF4s/ftJpKEXz8gBhGq9lQWl0mBxEhlPSx3xhktj5gZC" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Todo List</h1>
-    <a href="{% url 'create_task' %}">Add New Task</a>
-    <ul>
+<div class="container mt-4">
+    <h1 class="mb-4">Todo List</h1>
+
+
+    <a href="{% url 'create_task' %}" class="btn btn-primary mb-4">Add New Task</a>
+
+    <ul class="list-group">
         {% for task in tasks %}
-            <li>
-                {{ task.content }} - {{ task.created_at }} - {{ task.deadline }}
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+            <span>{{ task.content }} - {{ task.created_at }} - {{ task.deadline }}</span>
+
+            <div class="btn-group">
                 {% if task.is_done %}
-                    <button><a href="{% url 'toggle_task_status' task.id %}">Undo</a></button>
+
+                <button class="btn btn-warning">
+                    <a href="{% url 'toggle_task_status' task.id %}" class="text-decoration-none text-white">Undo</a>
+                </button>
                 {% else %}
-                    <button><a href="{% url 'toggle_task_status' task.id %}">Complete</a></button>
+
+                <button class="btn btn-success">
+                    <a href="{% url 'toggle_task_status' task.id %}"
+                       class="text-decoration-none text-white">Complete</a>
+                </button>
                 {% endif %}
-                <a href="{% url 'update_task' task.id %}">Edit</a>
-                <a href="{% url 'delete_task' task.id %}">Delete</a>
-            </li>
+
+
+                <a href="{% url 'update_task' task.id %}" class="btn btn-info text-white ms-2">Edit</a>
+
+
+                <a href="{% url 'delete_task' task.id %}" class="btn btn-danger text-white ms-2">Delete</a>
+            </div>
+        </li>
         {% endfor %}
     </ul>
-    <a href="{% url 'tag_list' %}">Tags</a>
+
+
+    <a href="{% url 'tag_list' %}" class="btn btn-secondary mt-4">Tags</a>
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
