--- a/todolist/tasks/templates/tasks/create_tag.html
+++ b/todolist/tasks/templates/tasks/create_tag.html
@@ -1,3 +1,4 @@
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,7 +16,7 @@
         {% csrf_token %}
         <div class="mb-3">
             <label for="id_name" class="form-label">Tag Name</label>
-            {{ form.name|add_class:"form-control" }}
+
             {% if form.name.errors %}
             <div class="text-danger">
                 {% for error in form.name.errors %}
