--- a/todolist/tasks/templates/includes/sidebar.html
+++ b/todolist/tasks/templates/includes/sidebar.html
@@ -1,5 +1,4 @@
 <div id="sidebar">
-    <a href="{% url 'home' %}">Home</a>
-    <a href="{% url 'tag_list' %}">Tag List</a>
-
+    <a href="{% url 'tasks:home' %}">Home</a>
+    <a href="{% url 'tasks:tag_list' %}">Tags</a>
 </div>
