--- a/todolist/tasks/templates/tasks/add_task.html
+++ b/todolist/tasks/templates/tasks/add_task.html
@@ -1,28 +1,15 @@
-{% load crispy_forms_tags %}
+{% extends "base.html" %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Task</title>
-</head>
-
-<body>
-
-    <h1>Add a New Task</h1>
+{% block content %}
+    <h1>Add task</h1>
 
     <form method="POST">
         {% csrf_token %}
 
-        {{ form|crispy }}
-
-        <button type="submit">Add Task</button>
+        <button type="submit">Add task</button>
     </form>
 
     <br>
 
-    <a href="{% url 'home' %}">Back to Home</a>
-
-</body>
-</html>
+    <a href="{% url 'tasks:home' %}">Back to Home</a>
+{% endblock %}
